--- a/index.html
+++ b/index.html
@@ -4,6 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grupp 21 - Labb1</title>
+    <style>
+        body {
+                 font-family: Arial, sans-serif;
+                 background-color: #1e3120;
+                 color: #000;
+             }
+             .container {
+                 width: 50%;
+                 margin: 50px auto;
+                 background-color: #ecf0f1;
+                 padding: 20px;
+                 border-radius: 10px;
+             }
+             h1 {
+                 text-align: center;
+                 color:#fff
+             }
+             .textfield {
+                 margin-bottom: 15px;
+             }
+             label {
+                 display: block;
+                 margin-bottom: 5px;
+                 color:#000
+             }
+             input[type="text"], textarea {
+                 width: 95%;
+                 padding: 10px;
+                 font-size: 16px;
+                 border: 1px solid #000;
+                 border-radius: 5px;
+             }
+             button {
+                 background-color: #274b32;
+                 color: white;
+                 padding: 10px 15px;
+                 border: none;
+                 margin-top: 20px;
+                 border-radius: 5px;
+                 cursor: pointer;
+             }
+             button:hover {
+                 background-color: #6b886b;
+             }
+             .emptyBox {
+                 margin-top: 20px;
+                 padding: 50px;
+                 border-radius: 5px;
+                 text-align: center;
+                 border: 1px solid #000;
+                 border-radius: 5px;
+             }
+     
+             .checkbox {
+                 margin-bottom: 15px;
+             }  
+         </style>
 </head>
 <body>
     <h1> Labb 1 - Grupp 21</h1> 
