--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
   
         <div class="emptyBox" id="emptyBox"></div>
     </form>
-
+   </div>
+   <script src="./script.js"></script>
 </body>
 </html>
