--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
              .container {
                  width: 50%;
                  margin: 50px auto;
-                 background-color: #ecf0f1;
+                 background-color: #d0d8d0;
                  padding: 20px;
                  border-radius: 10px;
              }
@@ -78,7 +78,7 @@
         class="textfield">
 
         <div>
-            <label for="divStyle">Lägg till bakgrundsfärg</label> 
+            <label for="divStyle">Lägg till</label> 
             <input type="checkbox" 
             name="divStyle" 
             id="divStyle" 
